# tbxt-hackathon

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  TBXT_TEP_datasheet_v1_0.txt  boltz-targets.md  brachyury-site-summary.md  pyproject.toml
data/: Naar_SMILES.xlsx  a-site-binders.txt  docking_scores_pocket_A.csv  docking_scores_pocket_D.csv  docking_top3_pocket_A.csv  docking_top3_pocket_D.csv  final_selections.csv  onepot_10k_filtered.csv  onepot_neighbors_filtered.csv
data/a-site-binders/: 5qrj_G_NWP.sdf  5qrk_G_NWV.sdf
data/classification-models-try1-rjg/: chemeleon_no_val_cv_fold_0.ckpt  chemeleon_no_val_cv_fold_1.ckpt  chemeleon_no_val_cv_fold_2.ckpt  chemeleon_no_val_cv_fold_3.ckpt  chemeleon_no_val_cv_fold_5.ckpt  chemeleon_no_val_holdout.csv  chemeleon_no_val_metrics.json  chemeleon_no_val_oof.csv  chemeleon_with_val_holdout.csv  chemeleon_with_val_metrics.json  chemeleon_with_val_oof.csv  holdout_comparison_brier.csv  holdout_comparison_summary.json  holdout_rank_per_positive.csv  holdout_rank_summary.json  holdout_rank_tukey.txt  holdout_rank_wilcoxon.txt  holdout_tukey_hsd.txt  xgb_no_val_cv_fold_0.ubj  xgb_no_val_cv_fold_1.ubj  xgb_no_val_cv_fold_2.ubj  xgb_no_val_cv_fold_3.ubj  xgb_no_val_cv_fold_5.ubj  xgb_no_val_holdout.csv  xgb_no_val_metrics.json  xgb_no_val_oof.csv  xgb_with_val_cv_fold_0.ubj  xgb_with_val_cv_fold_1.ubj  xgb_with_val_cv_fold_2.ubj  xgb_with_val_cv_fold_3.ubj  xgb_with_val_cv_fold_5.ubj  xgb_with_val_holdout.csv  xgb_with_val_metrics.json  xgb_with_val_oof.csv
data/classification-models-try2-rjg/: chemeleon_no_val_cv_fold_0.ckpt  chemeleon_no_val_cv_fold_1.ckpt  chemeleon_no_val_cv_fold_2.ckpt  chemeleon_no_val_cv_fold_3.ckpt  chemeleon_no_val_cv_fold_5.ckpt  chemeleon_no_val_holdout.csv  chemeleon_no_val_metrics.json  chemeleon_no_val_oof.csv  chemeleon_with_val_holdout.csv  chemeleon_with_val_metrics.json  chemeleon_with_val_oof.csv  fold_assignments_filtered.csv  holdout_comparison_brier.csv  holdout_comparison_summary.json  holdout_rank_per_positive.csv  holdout_rank_summary.json  holdout_rank_tukey.txt  holdout_rank_wilcoxon.txt  (+18 more)
docs/: HACKATHON_PLAN.md  README.md  WHATS_NEXT.md  deployment-model.md  docking.md  modeling-notes.md  pipeline-presentation.md  pocket-mapper-soundness.md
notebooks/: 01-data-prep.html  01-data-prep.ipynb  02-docking-demo.ipynb  03-batch-dock-pocket-A.ipynb  04-batch-dock-pocket-C.ipynb  05-batch-dock-pocket-D.ipynb  06-pose-review-pocket-A.ipynb  07-pose-review-pocket-D.ipynb
scripts/: 01_make_labels.py  README-rmsd.md  README-sdf-extraction.md  build_pairwise_classifier.py  build_pocket_assigner.py  build_xgb_classifier.py  build_xgb_classifier_pacmap_folds.py  calculate_rmsd.py  extract_sgc_fragments.py  extract_smiles_from_sdf.py  fetch_fragment_smiles.py  filter_onepot_properties.py  filter_zenodo_similarity.py  probe_onepot.py  query_and_filter_10k.py  query_onepot_neighbors.py  resolve_pocket_mappings.py  score_and_select.py  score_pockets.py  test_onepot_api.py
(+320 files in other folders)
